--- a/wpYAML/sass/wpyaml-sass/_wpstyling.scss
+++ b/wpYAML/sass/wpyaml-sass/_wpstyling.scss
@@ -69,8 +69,8 @@ img {
     margin: 0 0 1em 1em;
   }
   &.aligncenter {
-    text-align: center;
-    margin: 0 auto 0 auto;
+    display: block;
+    margin: 1em auto;
   }
 }
 
